# matrix

./: .gitignore  .gitmodules  CMakeLists.txt  changelog.txt  imgui.ini  log.txt  readme.md
application/: CMakeLists.txt
application/src/: EntryPoint.cpp
documentation/: Documentation.md  Timeline.md
framework/: Example_main.cpp
framework/include/: Application.h  Core.h  Logger.h  Matrix.h  Shader.h  Utils.h
framework/pch/: stdafx.h
framework/platform/: OpenGLRenderer.cpp  OpenGLRenderer.h
framework/source/: Application.cpp  Logger.cpp  Shader.cpp
licenses/: Icons.txt
matrix/: CMakeLists.txt  Documentation.md  Matrix.h  Roadmap.md
matrix/src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Camera_Test.cpp  Camera_Test.h  Core.h  Logger.cpp  Logger.h  Model.cpp  Model.h  Model_Test.cpp  Model_Test.h  Profiler.cpp  Profiler.h  Shader.cpp  Shader.h  Shader_Test.cpp  Shader_Test.h  Timer.cpp  Timer.h  Utility.cpp  Utility.h  Utils.cpp  Utils.h
matrix/src/controller/: Controller.cpp  Controller.h  InputMap.cpp  InputMap.h
matrix/src/event/: Event.cpp  Event.h  KeyboardEvent.cpp  KeyboardEvent.h  MatrixExceptions.h  MouseEvent.cpp  MouseEvent.h  WindowEvent.cpp  WindowEvent.h
matrix/src/intersections/: MousePicker.cpp  MousePicker.h  RayIntersection.cpp  RayIntersection.h
matrix/src/layers/: API_Layer.cpp  API_Layer.h  ContainerNode.cpp  ContainerNode.h  Editor_Layer.cpp  Editor_Layer.h  GeometryNode.cpp  GeometryNode.h  ImGui_Layer.cpp  ImGui_Layer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Level.cpp  Level.h  LightNode.cpp  LightNode.h  Node.cpp  Node.h  ObjectNode.cpp  ObjectNode.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  Transform.cpp  Transform.h  Window_Layer.cpp  Window_Layer.h  World.cpp  World.h  World_Layer.cpp  World_Layer.h
matrix/src/math/: Ray.h
matrix/src/pch/: stdafx.cpp  stdafx.h
matrix/src/platform/: API_OpenGL.cpp  API_OpenGL.h
matrix/src/platform/api/: API.h  API_ErrorHandling.cpp  API_ErrorHandling.h  API_OpenGL.cpp  API_OpenGL.h  Assimp_Model.cpp  Assimp_Model.h  Framebuffer.cpp  Framebuffer.h  Framebuffer_OpenGL.cpp  Framebuffer_OpenGL.h  Mesh.cpp  Mesh.h  Mesh_OpenGL.cpp  Mesh_OpenGL.h  Model.cpp  Model.h  Model_Handler.cpp  Model_Handler.h  Model_OpenGL.cpp  Model_OpenGL.h  Parser_Wavefront.cpp  Parser_Wavefront.h  Shader.cpp  Shader.h  Shader_DirectX.cpp  Shader_DirectX.h  Shader_OpenGL.cpp  Shader_OpenGL.h  Shader_Profiles.h  Texture.cpp  Texture.h  Texture_DirectX.cpp  Texture_DirectX.h  Texture_OpenGL.cpp  Texture_OpenGL.h
matrix/src/platform/api/renderer/: Shader.cpp
matrix/src/platform/controller/: Controller.cpp  Controller.h
matrix/src/platform/gui/: GUI.cpp  GUI.h  GUI_ImGui.cpp  GUI_ImGui.h  GUI_ImGui_Editor.cpp  GUI_ImGui_Events.cpp  GUI_ImGui_Flags.cpp  GUI_ImGui_Flags.h  GUI_ImGui_Hierarchy.cpp  GUI_ImGui_Logger.cpp  GUI_ImGui_MenuBar.cpp  GUI_ImGui_Popup.cpp  GUI_ImGui_Popup.h  GUI_ImGui_Viewport.cpp  GUI_ImGui_Window.cpp  GUI_ImGui_Window.h
matrix/src/platform/gui/editor/: Editor_Console.cpp  Editor_Console.h  Editor_Dock.cpp  Editor_Dock.h  Editor_Editor.cpp  Editor_Editor.h  Editor_Explorer.cpp  Editor_Explorer.h  Editor_Global.h  Editor_Hierarchy.cpp  Editor_Hierarchy.h  Editor_Modules.h  Editor_Object.cpp  Editor_Object.h  Editor_Profiler.cpp  Editor_Profiler.h  Editor_Viewport.cpp  Editor_Viewport.h  GUI_Editor.cpp  GUI_Editor.h  GUI_ImGui_Editor.cpp  GUI_ImGui_Hierarchy.cpp  GUI_ImGui_Logger.cpp  GUI_ImGui_MenuBar.cpp  GUI_ImGui_Viewport.cpp
matrix/src/platform/gui/editor/legacy/: GUI_ImGui_Editor.cpp  GUI_ImGui_Flags.cpp  GUI_ImGui_Flags.h  GUI_ImGui_Logger.cpp  GUI_ImGui_Viewport.cpp
matrix/src/platform/gui/utility/: GUI_ImGui_ContextMenu.cpp  GUI_ImGui_ContextMenu.h  GUI_ImGui_DirectoryEditor.cpp  GUI_ImGui_DirectoryIterator.h  GUI_ImGui_Icon.cpp  GUI_ImGui_Icon.h  GUI_ImGui_Input.cpp  GUI_ImGui_Input.h  GUI_ImGui_Popup.cpp  GUI_ImGui_Popup.h  GUI_ImGui_Utility.h  GUI_ImGui_Window.cpp  GUI_ImGui_Window.h
matrix/src/platform/window/: Controller.cpp  Controller.h  ControllerGLFW.cpp  ControllerGLFW.h  Window.cpp  Window.h  WindowGLFW.cpp  WindowGLFW.h  WindowSDL2.cpp  WindowSDL2.h  Window_GLFW.cpp  Window_GLFW.h  Window_SDL2.cpp  Window_SDL2.h
matrix/src/renderer/: Shader.cpp  Shader.h
matrix/src/world/: ContainerNode.cpp  ContainerNode.h  GeometryNode.cpp  GeometryNode.h  Node.cpp  Node.h  Scene.cpp  Scene.h  SceneGraph.cpp  World.cpp  World.h
resources/: gui_default_layout.ini  log_file.txt
resources/examples/: debug.mxproj
resources/imgui_init/: gui_default_layout.ini  gui_default_layout_backup.ini
resources/matrix/reports/: yes.sir
resources/matrix/shaders/: blinn_phong_material.vert  simple_depth.vert  static_color.frag
resources/models/simple_chair/: Chair.mtl
resources/models/table/: 13493_Round_Table_with_Tablecloth_v1_L3.mtl
resources/scenes/: My First Scene.mx  New Scene.mx  OtherRoom.mx  OtherRoomLinux.mx  Room - Copy.mx  Room.mx  Room2.mx  Room420.mx  Room5.mx  RoomLinux.mx  e4.mx  earth.mx  save_scene_test.txt
resources/shaders/: assimp_blinn_phong.frag  blinn_phong.frag  blinn_phong.vert  blinn_phong_material.frag  blinn_phong_material.vert  phong.frag  phong.vert  screen_buffer.frag  screen_buffer.vert  simple_depth.frag  static_color.frag  static_color.vert  texture.frag  texture.vert  trivial.frag  trivial.red.vert  trivial.vert  trivial_red.frag
tests/: CMakeLists.txt
tests/renderer/shadow mapping/: CMakeLists.txt  main.cpp
